erDiagram
  USER {
    bigint id PK
    string email
    datetime marketing_opt_in_at
    string marketing_opt_in_source
    datetime marketing_opt_out_at
    string marketing_opt_out_reason
  }

  ACCOUNT {
    bigint id PK
    bigint owner_id FK
    boolean personal
    datetime archived_at
    integer student_limit
    boolean complimentary_premium
    string complimentary_premium_note
  }

  ACCOUNT_USER {
    bigint id PK
    bigint account_id FK
    bigint user_id FK
    jsonb roles
  }

  ACCOUNT_INVITATION {
    bigint id PK
    bigint account_id FK
    bigint invited_by_id FK
    string name
    string email
    string token
    jsonb roles
  }

  API_TOKEN {
    bigint id PK
    bigint user_id FK
  }

  CONNECTED_ACCOUNT {
    bigint id PK
    bigint owner_id FK
    string owner_type
  }

  NOTIFICATION_TOKEN {
    bigint id PK
    bigint user_id FK
  }

  LOOPS_WEBHOOK_EVENT {
    bigint id PK
    string webhook_id
    string event_name
    datetime event_time
    jsonb payload
    datetime processed_at
  }

  USER ||--o| ACCOUNT_USER : one membership
  ACCOUNT ||--o{ ACCOUNT_USER : admin parents

  %% Accounts are Family records: personal is constrained false, each family
  %% has at most two admin parents, and archived accounts retain billing
  %% history after their former parent joins another family.
  USER ||--o{ ACCOUNT : owns
  ACCOUNT ||--o{ ACCOUNT_INVITATION : invitations
  USER o|--o{ ACCOUNT_INVITATION : invites
  USER ||--o{ API_TOKEN : api_tokens
  USER ||--o{ CONNECTED_ACCOUNT : connected_accounts
  USER ||--o{ NOTIFICATION_TOKEN : notification_tokens

  %% MarketingConsent is a User concern. Consent state is stored on users,
  %% rather than in a separate record, to keep one current preference per user.

  %% LOOPS_WEBHOOK_EVENT has no FK to USER: LoopsWebhookEventProcessor
  %% resolves the user from the payload's contactIdentity (userId/email) at
  %% processing time, not via a stored association. webhook_id is uniquely
  %% indexed for replay dedupe (30-day retention outlives Loops' 24h retries).
